[gd_scene load_steps=21 format=3 uid="uid://bt0bta757pek3"]

[ext_resource type="PackedScene" uid="uid://cfgeyq176uxh3" path="res://TaskManager.tscn" id="1_1ainy"]
[ext_resource type="Script" uid="uid://cyt36c33aqg8o" path="res://ScriptTestScene.gd" id="1_n6hdu"]
[ext_resource type="Script" uid="uid://7afgcvdmbk0n" path="res://character_control.gd" id="1_vonw3"]
[ext_resource type="PackedScene" uid="uid://7wnkn46upv5o" path="res://Assets/Characters/character-female-b.glb" id="2_vonw3"]
[ext_resource type="PackedScene" uid="uid://be654a1tctso0" path="res://Assets/Characters/character-male-a.glb" id="3_f2txt"]
[ext_resource type="Shader" uid="uid://bouetmump65f5" path="res://color_fill.gdshader" id="3_oi3di"]
[ext_resource type="Script" uid="uid://cvorkkstiowek" path="res://interact_zone.gd" id="5_f2txt"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_oi3di"]
sky_top_color = Color(0.86, 0.7482, 0.77615, 1)
sky_horizon_color = Color(1.05407, 1.01837, 1.01636, 1)
ground_horizon_color = Color(1.05407, 1.01837, 1.01636, 1)
energy_multiplier = 0.8

[sub_resource type="Sky" id="Sky_0b4ue"]
sky_material = SubResource("ProceduralSkyMaterial_oi3di")

[sub_resource type="Environment" id="Environment_f2txt"]
background_mode = 2
sky = SubResource("Sky_0b4ue")
ambient_light_sky_contribution = 0.5
ambient_light_energy = 0.85
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_u52ul"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n6hdu"]
lifetime_randomness = 0.29
direction = Vector3(1, 1, 1)
spread = 84.036
initial_velocity_max = 2.0
gravity = Vector3(0, -3, 0)
scale_min = 0.07
scale_max = 0.15

[sub_resource type="SphereMesh" id="SphereMesh_km5ld"]

[sub_resource type="BoxMesh" id="BoxMesh_n6hdu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_km5ld"]
albedo_color = Color(0.450277, 0.503171, 0.932233, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_vonw3"]

[sub_resource type="BoxMesh" id="BoxMesh_vonw3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0b4ue"]
render_priority = 0
shader = ExtResource("3_oi3di")
shader_parameter/color = Color(0.313292, 0.50872, 1, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_oi3di"]
radius = 1.719

[sub_resource type="CanvasTexture" id="CanvasTexture_n6hdu"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_n6hdu")

[node name="TaskManager" parent="." instance=ExtResource("1_1ainy")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_f2txt")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.923913, -0.196087, 0.328535, 0, 0.858683, 0.512507, -0.382603, -0.473512, 0.793348, 4.833, 7.798, 10.55)
fov = 36.6044
size = 8.619

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.893826, 0.448414, 0, -0.448414, 0.893826, 0, 1.226, 1.06178)
light_energy = 0.677

[node name="Player_1" type="CharacterBody3D" parent="." groups=["players"]]
collision_mask = 7
axis_lock_linear_y = true
script = ExtResource("1_vonw3")

[node name="character_model" parent="Player_1" instance=ExtResource("2_vonw3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.021, 0, 0.01)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player_1"]
transform = Transform3D(0.4, 0, 0, 0, 0.399739, 0.0144552, 0, -0.0144552, 0.399739, 0, 0.2, 0)
shape = SubResource("CylinderShape3D_u52ul")

[node name="ParticleGenerator" type="GPUParticles3D" parent="Player_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.101685, -0.305363)
amount = 20
lifetime = 0.5
speed_scale = 0.5
process_material = SubResource("ParticleProcessMaterial_n6hdu")
draw_pass_1 = SubResource("SphereMesh_km5ld")

[node name="PickUpDisplay" type="MeshInstance3D" parent="Player_1"]
transform = Transform3D(0.21, 0, 0, 0, 0.21, 0, 0, 0, 0.21, 0, 0.842057, 0)
visible = false
mesh = SubResource("BoxMesh_n6hdu")
surface_material_override/0 = SubResource("StandardMaterial3D_km5ld")

[node name="Player_2" type="CharacterBody3D" parent="." groups=["players"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.997148, -0.0152974, 0.00746489)
collision_mask = 7
script = ExtResource("1_vonw3")
player_num = 2

[node name="character_model" parent="Player_2" instance=ExtResource("3_f2txt")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player_2"]
transform = Transform3D(0.4, 0, 0, 0, 0.399739, 0.0144552, 0, -0.0144552, 0.399739, 0, 0.2, 0)
shape = SubResource("CylinderShape3D_u52ul")

[node name="ParticleGenerator" type="GPUParticles3D" parent="Player_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.101685, -0.305363)
amount = 20
lifetime = 0.5
speed_scale = 0.5
process_material = SubResource("ParticleProcessMaterial_n6hdu")
draw_pass_1 = SubResource("SphereMesh_km5ld")

[node name="PickUpDisplay" type="MeshInstance3D" parent="Player_2"]
transform = Transform3D(0.21, 0, 0, 0, 0.21, 0, 0, 0, 0.21, 0, 0.842057, 0)
visible = false
mesh = SubResource("BoxMesh_n6hdu")
surface_material_override/0 = SubResource("StandardMaterial3D_km5ld")

[node name="Solid" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.86575, -0.356169, 1.13774)
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.500894, 0)
shape = SubResource("BoxShape3D_vonw3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.490398, 0)
mesh = SubResource("BoxMesh_vonw3")

[node name="Interactibles" type="Node" parent="."]

[node name="Interactable" type="Node3D" parent="Interactibles" groups=["interactables"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.64005, 0, 0)
script = ExtResource("5_f2txt")

[node name="Model" type="MeshInstance3D" parent="Interactibles/Interactable"]
mesh = SubResource("BoxMesh_vonw3")
skeleton = NodePath("../Solid")
surface_material_override/0 = SubResource("ShaderMaterial_0b4ue")

[node name="Solid" type="StaticBody3D" parent="Interactibles/Interactable"]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactibles/Interactable/Solid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.500894, 0)
shape = SubResource("BoxShape3D_vonw3")

[node name="InteractZone" type="Area3D" parent="Interactibles/Interactable"]
collision_layer = 4

[node name="CollisionArea" type="CollisionShape3D" parent="Interactibles/Interactable/InteractZone"]
transform = Transform3D(1.00505, 0, 0, 0, 1.00505, 0, 0, 0, 1.00505, 0, 0, 0)
shape = SubResource("CylinderShape3D_oi3di")

[node name="Orange" type="Sprite3D" parent="."]
transform = Transform3D(0.883333, 0, 0, 0, 1, 0, 0, 0, 1.08333, -1.21991, 0, -0.745532)
modulate = Color(0.941131, 0.711615, 0.513554, 1)
pixel_size = 20.7338
axis = 1
texture = SubResource("CanvasTexture_n6hdu")

[connection signal="body_entered" from="Interactibles/Interactable/InteractZone" to="Interactibles/Interactable" method="_on_body_entered"]
[connection signal="body_exited" from="Interactibles/Interactable/InteractZone" to="Interactibles/Interactable" method="_on_body_exited"]
